--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy":"gh-pages -d build"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
     "@types/three": "^0.164.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.164.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
