--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy":"gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.13",
@@ -16,5 +16,8 @@
     "three": "^0.164.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "lil-gui": "^0.19.2"
   }
 }
